ObligatoriskOppgave3.md er ferdigskrevet